<?xml version="1.0"?>
<package>
  <name>easydepthcalibration</name>
  <version>0.0.0</version>
  <description>The easyDepthCalib package</description>

  <maintainer email="dicicco@dis.uniroma1.it">Maurilio Di Cicco</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>cv</build_depend>
</package>
